<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spy Game</string>
    
    <!-- Main Screen -->
    <string name="start_new_game">Start New Game</string>
    <string name="settings">Settings</string>
    <string name="instructions">Instructions</string>
    <string name="exit">Exit</string>
    
    <!-- Settings -->
    <string name="settings_title">Game Settings</string>
    <string name="total_players">Total Players</string>
    <string name="number_of_spies">Number of Spies</string>
    <string name="game_duration">Game Duration (minutes)</string>
    <string name="add_word">Add New Word</string>
    <string name="test_alarm">Test Alarm</string>
    <string name="save_settings">Save Settings</string>
    <string name="cancel">Cancel</string>
    
    <!-- Game Screen -->
    <string name="players_info">Players: %1$d | Spies: %2$d</string>
    <string name="player_button">Player #%1$d</string>
    <string name="start_game">Start Game</string>
    <string name="abort_game">Abort Game</string>
    
    <!-- Instructions -->
    <string name="instructions_title">How to Play</string>
    
    <!-- Popup Messages -->
    <string name="you_are_spy">You are a SPY in this game!</string>
    <string name="selected_word">The selected word is: %1$s</string>
    <string name="close">Close</string>
    <string name="auto_close_timer">Auto-closing in %1$d seconds</string>
    
    <!-- Timer -->
    <string name="time_remaining">Time Remaining: %1$s</string>
    <string name="game_over">Game Over!</string>
    <string name="new_game">New Game</string>
    <string name="close_app">Close App</string>
    
    <!-- Validation Messages -->
    <string name="min_players_error">Minimum 3 players required</string>
    <string name="max_duration_error">Maximum 60 minutes allowed</string>
    <string name="min_duration_error">Minimum 5 minutes required</string>
    <string name="spy_count_error">Invalid number of spies</string>
    <string name="word_exists_warning">Word already exists in the list</string>
    <string name="word_added_success">Word added successfully</string>
    <string name="empty_word_error">Please enter a word</string>
    
    <!-- Test -->
    <string name="test_alarm_title">Test Alarm</string>
    <string name="test_alarm_message">This will trigger the alarm for 5 seconds</string>
    <string name="start_test">Start Test</string>
</resources>
